tests/invalid-syntax/46494_lexical_error/invalid_char.agu
-- 46494, Leonor Figueirinhas

let y : Int = 5 $ 2